@@ -16,24 +16,23 @@
  *     - {@see BatchForm}: The form to manually send invoice data to Acumulus.
  *     - {@see ConfirmUninstallForm}: A popup to ask for confirmation that the
  *       data may be deleted. Not really used yet
- *     - {@see \Siel\Acumulus\WooCommerce\Shop\ShopOrderOverviewForm}: An
- *       information box on an order screen informing the user about the status
- *       of the Acumulus invoice related to the actual order. For now, only a
- *       proof of concept is available for WooCommerce. The name of the form
- *       and its features are pretty sure to be changed in the near future.
+ *     - {@see InvoiceStatusForm}: An information box or tab on an order screen
+ *       informing the user about the status of the Acumulus invoice related to
+ *       the actual order. For now, this has only a working implementation for
+ *       WooCommerce. Other shops will follow, probably leading to changes in
+ *       its definition.
  *
  * When implementing a new extension, you must override the abstract managers:
  * - {@see AcumulusEntryManager}
  * - {@see InvoiceManager}
  *
- * And you may have to override the model and forms:
+ * And you may have to override the following model and forms:
  * - {@see AcumulusEntry} just to define the column names.
  * - {@see ConfigForm}
  * - {@see AdvancedConfigForm}
  * - {@see BaseConfigForm}
  * - {@see BatchForm}
  * - {@see ConfirmUninstallForm}
- * - {@see \Siel\Acumulus\WooCommerce\Shop\ShopOrderOverviewForm} in the near
- *   future.
+ * - {@see InvoiceStatusForm}
  */
 namespace Siel\Acumulus\Shop;
